Hide prototype embeds on small screen due to proto bug

--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -13,7 +13,9 @@
 }
 
 @media #{$small} {
-
+  .protoio-embed-prototype {
+    display: block;
+  }
 }
 
 @media #{$medium} {
