--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -151,6 +151,7 @@ blockquote {
   max-width: 100%;
   width: 100%;
   height: 400px;
+  display: none;
 }
 
 .social {
